<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/joke_detail"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/chuck_blue"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/joke_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/chuck_sample"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/joke_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pluto is actually an orbiting group of British soldiers from the American Revolution who entered space after the Chuck gave them a roundhouse kick to the face."
        android:textColor="@color/white"/>

</LinearLayout>