<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="handlers"
            type="it.dindonkey.chucknorrisjokes.jokes.ErrorFragment"/>
    </data>

    <LinearLayout
        android:id="@+id/error_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chuck_8bit"
            android:contentDescription="@string/chuck"/>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/error_message"/>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="88dp"
            android:layout_height="36dp"
            android:onClick="@{handlers.onRetryButtonClick}"
            android:text="@string/retry_button_text"/>

    </LinearLayout>
</layout>